== Change Log

=== Edge

* Avoid bootstrap errors related to Radiant::Config by checking for
table existence. [Sean Cribbs]
* Correct status code typo in Admin::ResourceController. [Sean Cribbs]

=== 0.7.1 Engraving

* Properly escape page part contents in the UI. [John Muhl, Sean Cribbs]
* Fix tag reference popup and spec out helper better. [Sean Cribbs]

=== 0.7.0 Intaglio
* Add Roasters template. [Paul du Coudray]
* Make ResponseCache spec insensitive to key order. [Sean Cribbs]
* Adjust <r:children:count /> to use same options as <r:children:each />.
[Sean Cribbs]
* Allowing for custom labels and other options in save_model_button.
[Pat Allan]
* Ignoring TextMate project files. [Pat Allan]
* Present a more helpful error message when missing a mailer template.
[Nikolay Karev]
* Use ActiveRecord:Base#[] and ActiveRecord:Base#[]= instead of undocumented
read_attribute and write_attribute. [August Lilleas]
* Make extension installer use git submodules when appropriate. [Sean Cribbs]
* Ease extension updates by proxying deprecated named routes. [Sean Cribbs]
* Add support and specs for conditional GETs with ETags. [Sean Cribbs]
* Initialize and update submodules when freezing edge. [John Muhl]
* Add Nginx support to ResponseCache. [Sean Cribbs]
* Changed (some) permissions examples not to use login_system_matcher.
[Brandan Lennox]
* Remove expensive grep of Rails log in spec. [Rick DeNatale]
* Make markdown filter specs be tolerant of RDiscount. [Sean Cribbs]
* Be more explicit about vendor libraries, move Textile requirement into
core. [Sean Cribbs]
* Add <r:children:each:if/unless_first/last> tags. [Rick DeNatale]
* Use RDiscount's smart quotes instead of SmartyPants. [John Muhl]
* Update extension generator to use new admin REST routing. [Jeroen Janssen]
* Update Admin::ResourceController to overcome respond_to weaknesses by
choosing HTML format by default. [Sean Cribbs]
* Add an IE-specific integration spec. [Jeroen Janssen]