@@ -18,14 +18,17 @@ module Radiant
   #
   # Radiant currently uses the following settings:
   #
-  # admin.title           :: the title of the admin system
-  # admin.subtitle        :: the subtitle of the admin system
-  # defaults.page.parts   :: a comma separated list of default page parts
-  # defaults.page.status  :: a string representation of the default page status
-  # dev.host              :: the hostname where draft pages are viewable
-  # local.timezone        :: the timezone offset (using a String or integer
-  #                          from http://api.rubyonrails.org/classes/TimeZone.html)
-  #                          used to correct displayed times
+  # admin.title               :: the title of the admin system
+  # admin.subtitle            :: the subtitle of the admin system
+  # defaults.page.parts       :: a comma separated list of default page parts
+  # defaults.page.status      :: a string representation of the default page status
+  # defaults.page.filter      :: the default filter to use on new page parts
+  # dev.host                  :: the hostname where draft pages are viewable
+  # local.timezone            :: the timezone offset (using a String or integer
+  #                              from http://api.rubyonrails.org/classes/TimeZone.html)
+  #                              used to correct displayed times
+  # page.edit.published_date? :: when true, shows the datetime selector
+  #                              for published date on the page edit screen
   class Config < ActiveRecord::Base
     set_table_name "config"
 
@@ -33,21 +36,14 @@ module Radiant
       def [](key)
         if table_exists?
           pair = find_by_key(key)
-          pair.value unless pair.nil?
+          pair.value if pair
         end
       end
 
       def []=(key, value)
         if table_exists?
-          pair = find_by_key(key)
-          unless pair
-            pair = new
-            pair.key, pair.value = key, value
-            pair.save
-          else
-            pair.value = value
-            pair.save
-          end
+          pair = find_or_initialize_by_key(key)
+          pair.update_attributes(:value => value)
           value
         end
       end
